--- a/ProyectoPractico/index.html
+++ b/ProyectoPractico/index.html
@@ -4,14 +4,19 @@
     </head>
     <body>
         <h1>Login Ulima</h1>
+        <p>
+            Ingreso de usuario
+        </p>
         <p>Usuario:
             <input type="text" name="usuario" id="usuario">
         </p>
         <p>Contraseña:
             <input type="password" name="contraseña" id="contra">
         </p>
-        <label><input type="checkbox" id="cbox1" value="first_checkbox" /> Profesor</label>
-        <label><input type="checkbox" id="cbox2" value="segundp_checkbox" /> Alumno</label>
-        <input type="button" value="Ingresar" />
+        <label><input type="radio" name="tipo_usuario" value="Profesor" /> Profesor</label>
+        <label><input type="radio" name="tipo_usuario" value="Alumno" /> Alumno</label>
+        <p>
+        <input type="submit" value="Ingresar" />
+        </p>
     </body>
 </html>
