--- a/ProyectoPractico/index.html
+++ b/ProyectoPractico/index.html
@@ -16,7 +16,7 @@
         <label><input type="radio" name="tipo_usuario" value="Profesor" /> Profesor</label>
         <label><input type="radio" name="tipo_usuario" value="Alumno" /> Alumno</label>
         <p>
-        <input type="submit" value="Ingresar" />
+        <input type="submit" value="Ingresar" /><a href="formulario.html">
         </p>
     </body>
 </html>
